--- a/invapi/pom.xml
+++ b/invapi/pom.xml
@@ -57,6 +57,39 @@
     <version>1.18.22</version>
     <scope>provided</scope>
 </dependency>
+		<!-- Swagger Documentation -->
+		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.10.5</version>
+        </dependency>
+        
+
+    	<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.10.5</version>
+        </dependency>
+	    <dependency>
+	            <groupId>io.springfox</groupId>
+	            <artifactId>springfox-data-rest</artifactId>
+	            <version>2.10.5</version>
+	    </dependency>
+	    <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+            <version>2.10.5</version>
+    </dependency>
+    <dependency> 
+		    <groupId>org.springframework.boot</groupId> 
+		    <artifactId>spring-boot-starter-validation</artifactId> 
+	</dependency>	
+			<!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
+		<dependency>
+		    <groupId>com.google.collections</groupId>
+		    <artifactId>google-collections</artifactId>
+		    <version>1.0</version>
+		</dependency>
 		
 	</dependencies>
 
