--- a/invapi/pom.xml
+++ b/invapi/pom.xml
@@ -91,10 +91,22 @@
 		    <artifactId>google-collections</artifactId>
 		    <version>1.0</version>
 		</dependency> -->
+		<!-- Eureka -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<!-- Config server -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<!-- Vault -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-vault-config</artifactId>
+		</dependency>
+		
 		
 	</dependencies>
 <dependencyManagement>
