--- a/invapidocker/src/main/resources/application.properties
+++ b/invapidocker/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=7070
 #property files
 #spring.application.name=Inventory-API,eric-common,eric-app
 spring.application.name=Inventory-API
-db_url=jdbc:mysql://localhost:3306/ericnov2021batch1_prodinvdb?useSSL=true&&serverTimezone=UTC
+db_url=jdbc:mysql://mysql:3306/ericnov2021batch1_prodinvdb?useSSL=true&&serverTimezone=UTC
 db_driver=com.mysql.cj.jdbc.Driver
 db_username=root
-db_password=vignesh
+db_password=password
 #spring.profiles.active=dev
 #config server properties
 #spring.cloud.config.uri=http://localhost:8888
