--- a/invapidocker/src/main/resources/application.properties
+++ b/invapidocker/src/main/resources/application.properties
@@ -14,17 +14,17 @@ db_password=password
 #spring.datasource.username=root
 #spring.datasource.password=vignesh
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-## JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database=default
-#spring.jpa.show-sql=true
-## DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.continue-on-error=false
-#spring.datasource.generate-unique-name=false
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jackson.serialization.fail-on-empty-beans=false
+# JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=default
+spring.jpa.show-sql=true
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.continue-on-error=false
+spring.datasource.generate-unique-name=false
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jackson.serialization.fail-on-empty-beans=false
 ##eureka client properties
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #eureka.client.fetch-registry=false
