--- a/invapidocker/pom.xml
+++ b/invapidocker/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.eric</groupId>
-	<artifactId>invapi</artifactId>
+	<artifactId>invapidocker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>invapi</name>
 	<description>Demo project for Spring Boot</description>
