--- a/invapidocker/dockerfile
+++ b/invapidocker/dockerfile
@@ -1,4 +1,4 @@
 FROM java:8
 EXPOSE 7070
-ADD /target/invapi-0.0.1-SNAPSHOT.jar invapi-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","invapi-0.0.1-SNAPSHOT.jar"]
+ADD /target/invapidocker-0.0.1-SNAPSHOT.jar invapidocker-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","invapidocker-0.0.1-SNAPSHOT.jar"]
