--- a/camundacustomerapi/pom.xml
+++ b/camundacustomerapi/pom.xml
@@ -155,6 +155,19 @@
     <artifactId>jackson-datatype-jsr310</artifactId>
     <version>2.13.0</version>
 </dependency>
+
+<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
   </dependencies>
 
   <repositories>
