--- a/camundacustomerapi/src/main/resources/application.yaml
+++ b/camundacustomerapi/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ spring.datasource:
   #password: sa
 #spring.h2.console.enabled: true
   driverClassName: com.mysql.jdbc.Driver
-  url: jdbc:mysql://localhost:3306/ericcamunda2021db?useSSL=true&nullCatalogMeansCurrent=true 
+  url: jdbc:mysql://mysql:3306/ericcamunda2021db?useSSL=true&nullCatalogMeansCurrent=true 
   username: root
-  password: vignesh
+  password: password
 #spring.h2.console.enabled: true
 spring.jpa.hibernate.ddl-auto: update
 camunda.bpm:
@@ -37,3 +37,7 @@ spring.datasource.generate-unique-name: false
 spring.jpa.hibernate.naming.implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jackson.serialization.fail-on-empty-beans: false
+management.endpoint.metrics.enabled: true
+management.endpoints.web.exposure.include: "*"
+management.endpoint.prometheus.enabled: true
+management.metrics.export.prometheus.enabled: true
