--- a/invapiprometheusdocker/src/main/resources/application.properties
+++ b/invapiprometheusdocker/src/main/resources/application.properties
@@ -32,4 +32,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 #eureka.client.register-with-eureka=true
 #eureka.instance.lease-expiration-duration-in-seconds=2
 #eureka.instance.lease-renewal-interval-in-seconds=1
-
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus,info,health
