--- a/invapidocker/jenkinsfile
+++ b/invapidocker/jenkinsfile
@@ -13,8 +13,8 @@ pipeline{
        steps{
        
           bat "mvn -f ./invapidocker clean install -DskipTests"
-          bat "docker build -f invapidocker/dockerfile -t invapp ./invapidocker"
-                                   
+          
+          bat "./invapidocker/docker-compose up"                          
        }
    
    }
