--- a/invapidocker/jenkinsfile
+++ b/invapidocker/jenkinsfile
@@ -13,7 +13,7 @@ pipeline{
        steps{
        
           bat "mvn -f ./invapidocker clean install -DskipTests"
-          cd invapidocker
+          bat "cd invapidocker"
           bat "docker-compose up"                          
        }
    
