--- a/invapidocker/jenkinsfile
+++ b/invapidocker/jenkinsfile
@@ -13,7 +13,7 @@ pipeline{
        steps{
        
           bat "mvn -f ./invapidocker clean install -DskipTests"
-          bat "cd invapidocker"
+          bat """ cd /d "invapidocker " """
           bat "docker-compose up"                          
        }
    
