--- a/invapidocker/jenkinsfile
+++ b/invapidocker/jenkinsfile
@@ -15,8 +15,8 @@ pipeline{
         
        steps{
        
-          bat "mvn -f ./invapidocker clean install -DskipTests"
-          bat "cd invapidocker  & docker-compose up -d"
+          sh "mvn -f ./invapidocker clean install -DskipTests"
+          sh "cd invapidocker  & docker-compose up -d"
                                   
        }
    
