--- a/invapidocker/jenkinsfile
+++ b/invapidocker/jenkinsfile
@@ -16,7 +16,7 @@ pipeline{
        steps{
        
           sh "mvn -f ./invapidocker clean install -DskipTests"
-          sh "cd invapidocker  & /usr/local/bin/docker-compose up -d"
+          sh "cd invapidocker  & docker-compose up -d"
                                   
        }
    
