--- a/invapidocker/jenkinsfile
+++ b/invapidocker/jenkinsfile
@@ -17,7 +17,7 @@ pipeline{
        
           sh "mvn -f ./invapidocker clean install -DskipTests"
           //sh "cd invapidocker  & docker-compose up -d"
-                                  
+          sh "docker build -t invapp ./invapidocker"                        
        }
    
    }
